Refactoring#1: add validation function

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 		  <div class="form-group">
 			<label for="tem">Unit:</label>
 			<select class="form-select" aria-label="Default select example" id="unit">
-			  <option value="F">Fahrenheit</option>
-			  <option value="K">Kelvin</option>
-			  <option value="R">Réaumur</option>
+			  <option value="F">Fahrenheit.</option>
+			  <option value="K">Kelvin.</option>
+			  <option value="R">Réaumur.</option>
 			</select>
 		  </div>
 		  <br><button type="button" class="btn btn-primary">Convert</button>
