--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					u1 = "Kelvin";
 				}
 
-				alert("Temperature is " + t1 + " in " + u1);
+				document.getElementById("result").innerHTML=("Temperature is "+t1+" in "+u1);
 			});
 		});
 	</script>
